<resources>
    <string name="app_name">App Alfonso</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>
    <string name="my_account">My Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="form">Form</string>
    <string name="list">List</string>
    <string name="resume">Resume</string>
    <string name="tools">Tools</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="spinnerItems">
        <item>Report</item>
        <item>Poll</item>
        <item>Inspection</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
