<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/log_out_button"
        android:icon="@drawable/ic_exit_to_app"
            android:title="@string/log_out"
        app:showAsAction="always"
        android:orderInCategory="0"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_form"
            android:icon="@drawable/ic_insert_drive_file_black"
            android:title="@string/form" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_format_list_bulleted_black"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_resume"
            android:icon="@drawable/ic_assignment_black"
            android:title="@string/resume" />
        <item
            android:id="@+id/nav_credentials"
            android:icon="@drawable/ic_account_circle_black"
            android:title="@string/my_account" />
    </group>
</menu>